<resources>
    <string name="app_name">Ant Workforce</string>
    <string name="new_job_posting">New Job Posting</string>
    <string name="list_of_interest">Interest Received</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="name">Name</string>
    <string name="approval">Approval : </string>
    <string name="approved">Approved</string>
    <string name="choose_status">Choose status</string>
    <string name="pending">Pending</string>
    <string name="acceptable_rate">Acceptable Rate:</string>
    <string name="regno">RegNo:</string>
    <string name="experience">Experience:</string>
    <string name="minicv">Mini cv:</string>

    <string name="date_time">Date Time:</string>
    <string name="role">Role:</string>
    <string name="employer">Employer:</string>
    <string name="rate">Rate:</string>
    <string name="select">Select</string>
    <string name="no_completed_shifts">No Completed Shifts</string>
    <string name="no_posted_jobs">No Posted Jobs</string>
    <string name="hour">/hour</string>
    <string name="rating">Rating</string>
    <string name="distance">Distance:</string>
    <string name="duration">Duration:</string>
    <string name="address">Address:</string>
    <string name="vacancies">Vacancies:</string>
    <string name="posts">Posts</string>
    <string name="prefered_rate">My Preferred Rate:</string>
    <string name="timesheet_status">Timesheet Status:</string>
    <string name="start_date">Start Date</string>
    <string name="start_time">Start Time</string>
    <string name="number_of_staffs">Number of Roles</string>
    <string name="number_of_hours">Number of Hours</string>
    <string name="job_description">Job Description</string>
    <string name="repeat">Repeat</string>
    <string name="number_of_days">Number of Days</string>

    <string name="accepted">Accepted</string>
    <string name="confirmed">Confirmed</string>
    <string name="interest_received">Interests</string>
    <string name="interested"> Interested </string>
    <string name="read_more">Read More</string>
    <string name="read_less">Read Less</string>
    <string name="no_shifts">No Shifts</string>
    <string name="no_shifts_avail">No Shifts Available</string>
    <string name="feedback">Feedback</string>
    <string name="notes">Notes</string>
    <string name="more_feedback">More Feedback</string>
    <string name="accept">Accept</string>
    <string name="completed_shift">Completed shifts</string>
    <string name="posted_job">Posted jobs</string>
    <string name="enter_feedback">Please enter the feedback</string>
    <string name="post">Post Job</string>
    <string name="confirm">Confirm</string>
    <string name="submit_timesheet">Submit</string>
    <string name="reject">Reject</string>
    <string name="approve">Approve</string>
    <string name="successfully_accepted">Successfully Accepted</string>

    <string name="prompt_password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="dont_have_account">Don’t have an account? Sign up.</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field">This field is required</string>
    <string name="error_incorrect_login">Invalid login! Please try again</string>
    <string name="error_email_required">Email field is required</string>
    <string name="error_pwd_required">Password field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_interest_recevied_list">InterestReceviedListActivity</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_new_job">New Job Posting</string>
    <string name="networkcheckdialog">No connection detected, please connect to internet</string>
    <string name="materialDialogok">OK</string>
</resources>
