<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    card_view:cardBackgroundColor="@color/card_color"
    android:layout_margin="6dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txtDateTime"
                android:text="@string/date_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txtDateTimeValue"
                android:text="28/07/2018 08:00"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dp"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/role"
                android:text="@string/role"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAllCaps="false"/>
            <TextView
                android:id="@+id/roleValue"
                android:text="registered mental health nurse(RMN)"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:layout_marginLeft="6dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/rate"
                android:text="@string/rate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAllCaps="false"/>
            <TextView
                android:id="@+id/rateValue"
                android:text="$20.50/hour"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:layout_marginLeft="6dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/duration"
                android:text="@string/duration"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAllCaps="false"/>
            <TextView
                android:id="@+id/durationValue"
                android:text="8 hours"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:layout_marginLeft="6dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <TextView
                android:id="@+id/txtName"
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txtNameValue"
                android:text="Thomas Williams"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_marginLeft="6dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"></View>

            <TextView
                android:id="@+id/txtApproval"
                android:text="@string/approval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btnApprove"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:textColor="#ffffff"
                android:background="#29abe2"
                android:textAllCaps="false"
                android:text="@string/pending"
                android:textSize="16sp"
                android:layout_marginLeft="4dp"/>
            <TextView
                android:id="@+id/txtApprovalValue"
                android:text="@string/approved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>


        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>