<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    card_view:cardBackgroundColor="@color/card_color"
    android:layout_margin="6dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:gravity="center">
            <com.sample.poc.Widgets.CircularImageView
                android:id="@+id/profile_user_img"
                android:layout_width="60dp"
                android:layout_height="60dp"

                android:layout_alignParentLeft="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/female_1"
                />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:isIndicator="true"
                android:max="5"
                android:rating="5"
                android:stepSize="1"
                style = "?android:attr/ratingBarStyleSmall"/>

        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
     >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txtName"
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/txtNameValue"
                android:text="Paula Warker"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:textSize="16sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/rate"
                android:text="@string/acceptable_rate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAllCaps="false"/>
            <TextView
                android:id="@+id/rateValue"
                android:text="$20.50/hour"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:layout_marginLeft="6dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/regno"
                android:text="@string/regno"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAllCaps="false"/>
            <TextView
                android:id="@+id/regnoValue"
                android:text="A123D34"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:layout_marginLeft="6dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/experience"
                android:text="@string/experience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"/>

            <TextView
                android:id="@+id/experienceValue"
                android:text="5Yr"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:layout_marginLeft="6dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/readmore"
                android:text="@string/read_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_gravity="bottom"
                android:textColor="@color/link"
                />
<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_weight="1"/>
            <Button
                android:id="@+id/btnAccept"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:textColor="#ffffff"
                android:background="#29abe2"
                android:text="@string/accept"
                android:textAllCaps="false"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:id="@+id/lnrContentMore"
    android:visibility="gone">
    <TextView
        android:id="@+id/feedback"
        android:text="@string/feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAllCaps="false"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/lnrFeedbackList"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/readless"
            android:text="@string/read_less"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_gravity="bottom"
            android:textColor="@color/link"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"></View>
        <TextView
            android:id="@+id/morefeedback"
            android:text="@string/more_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_gravity="bottom"
            android:textColor="@color/link"
            />
    </LinearLayout>

</LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>