<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@color/cardview_light_background"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtDateTime"
            android:text="@string/date_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/txtDateTimeValue"
            android:text="28/07/2018 08:00"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="6dp"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/roleValue"
                android:text="registered mental health nurse(RMN)"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAllCaps="false"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/rate"
                android:text="@string/rate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAllCaps="false"/>
            <TextView
                android:id="@+id/rateValue"
                android:text="$20.50/hour"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:layout_marginLeft="6dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="25dp">
                <TextView
                    android:id="@+id/duration"
                    android:text="@string/duration"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"/>
                <TextView
                    android:id="@+id/durationValue"
                    android:text="8 hours"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"
                    android:layout_marginLeft="6dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/interest_received"
                android:text="@string/interest_received"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/link"
                android:textAllCaps="false"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_weight="1"></View>
            <TextView
                android:id="@+id/accepted"
                android:text="@string/accepted"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:textColor="@color/link"
                android:layout_marginLeft="6dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"></View>
            <TextView
                android:id="@+id/confirmed"
                android:text="@string/confirmed"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:textColor="@color/link"
                android:layout_marginLeft="6dp"/>
        </LinearLayout>
    </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"/>
    </LinearLayout>

    </LinearLayout>